[package]
description = "Starknet Rust types related to computation and execution."
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
name = "starknet_api"
repository = "https://github.com/starkware-libs/starknet-api"
version = "0.6.0-rc3"

[features]
testing = [  ]

[dependencies]
cairo-lang-starknet = "2.4.0-rc5"
derive_more = "0.99.17"
hex = "0.4.3"
indexmap = { version = "2.1.0", features = [ "serde" ] }
once_cell = "1.17.1"
primitive-types = { version = "0.12.1", features = [ "serde" ] }
serde = { version = "1.0.130", features = [ "derive", "rc" ] }
serde_json = "1.0.81"
starknet-crypto = "0.5.1"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.31"

[dev-dependencies]
assert_matches = "1.5.0"

[path.crates-io]
starknet-crypto = { git = "https://github.com/kariy/starknet-rs", rev = "fa8315714f35cad060dc568493a6056ada711e51" }
